Fixed Card spacing

--- a/src/styles/LoyaltyProgram.css
+++ b/src/styles/LoyaltyProgram.css
@@ -126,3 +126,7 @@
   width: 1248px;
   margin-left: 96px;
 }
+
+.lprow7 {
+  width: 1344px;
+}
